# grasped_object_identification_action

./: README.md
identification_action/: CMakeLists.txt  package.xml
identification_action/src/: identification_action.cpp
identification_action_msgs/: CMakeLists.txt  package.xml
identification_action_msgs/action/: Identification.action
rtt_identification_action_msgs/: CMakeLists.txt  package.xml
